[gd_scene load_steps=5 format=3 uid="uid://b6rj8hu8tbdy8"]

[ext_resource type="Script" path="res://game_elements/replica_arrow.gd" id="1_0st5e"]
[ext_resource type="Texture2D" uid="uid://b1aw0g45l02lp" path="res://assets/arrowUp.png" id="1_l21kr"]
[ext_resource type="Script" path="res://UI/placer.gd" id="3_rjx7b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjsr3"]
size = Vector2(20, 133)

[node name="ReplicaArrow" type="Area2D"]
script = ExtResource("1_0st5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -68.5)
shape = SubResource("RectangleShape2D_vjsr3")

[node name="icon" type="Sprite2D" parent="."]
position = Vector2(0, -73.5)
scale = Vector2(1, 3.94)
texture = ExtResource("1_l21kr")

[node name="placer" type="Node" parent="."]
script = ExtResource("3_rjx7b")
movement_type = 1

[connection signal="mouse_entered" from="." to="placer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="placer" method="_on_mouse_exited"]
[connection signal="mode_changed" from="placer" to="." method="_on_placer_mode_changed"]
